@@ -67,7 +67,7 @@
 <a class="unselected" href="http://wiki.apache.org/hadoop/ZooKeeper">Wiki</a>
 </li>
 <li class="current">
-<a class="selected" href="index.html">ZooKeeper Documentation</a>
+<a class="selected" href="index.html">ZooKeeper 3.1 Documentation</a>
 </li>
 </ul>
 <!--+
@@ -147,7 +147,7 @@ document.write("Last Published: " + document.lastModified);
 <div class="menupagetitle">ZooKeeper Internals</div>
 </div>
 </div>
-<div onclick="SwitchMenu('menu_1.5', 'skin/')" id="menu_1.5Title" class="menutitle">Informal Documentation</div>
+<div onclick="SwitchMenu('menu_1.5', 'skin/')" id="menu_1.5Title" class="menutitle">Miscellaneous</div>
 <div id="menu_1.5" class="menuitemgroup">
 <div class="menuitem">
 <a href="http://wiki.apache.org/hadoop/ZooKeeper">Wiki</a>
@@ -157,9 +157,6 @@ document.write("Last Published: " + document.lastModified);
 </div>
 <div class="menuitem">
 <a href="http://hadoop.apache.org/zookeeper/mailing_lists.html">Mailing Lists</a>
-</div>
-<div class="menuitem">
-<a href="zookeeperOtherInfo.html">Other Info</a>
 </div>
 </div>
 <div id="credit"></div>
