@@ -66,7 +66,7 @@ The following documents describe concepts and procedures to get you started usin
       </ul>
       </li>
       
-      <li><strong>Informal Documentation</strong><p> Miscellaneous, Informal ZooKeeper Documentation</p>
+      <li><strong>Miscellaneous ZooKeeper Documentation</strong>
       <ul>
       <li><a href="ext:wiki">Wiki</a></li>
       <li><a href="ext:faq">FAQ</a></li>    
